# Grafyx

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: .gitignore  README.md  pinned_commits.json
benchmarks/scripts/: __init__.py  bench_search.py  eval_data.py  run_all.py  setup_repos.py
docs/: grafyx-accuracy-test-prompt.md
docs/plans/: 2026-02-13-new-tools-design.md  2026-02-13-new-tools-implementation.md  2026-02-25-fractal-context-design.md  2026-02-25-fractal-context-implementation.md  2026-02-25-test-report-fixes.md  2026-02-26-test-report-fixes-design.md  2026-02-26-test-report-fixes.md  2026-03-07-ml-accuracy-boost-design.md  2026-03-07-ml-accuracy-boost.md
grafyx/: __init__.py  __main__.py  antigravity_proxy.py  constants.py  conventions.py  ml_inference.py  utils.py  watcher.py
grafyx/graph/: __init__.py  _analysis.py  _caller_features.py  _callers.py  _indexes.py  _patches.py  _paths.py  _query.py  _types.py  core.py
grafyx/search/: __init__.py  _code_encoder.py  _cross_encoder.py  _embeddings.py  _gibberish.py  _mamba.py  _merge.py  _relevance.py  _scoring.py  _source_filter.py  _source_index.py  _tokenizer.py  _tokens.py  searcher.py
grafyx/server/: __init__.py  _hints.py  _resolution.py  _state.py  _tools_exploration.py  _tools_graph.py  _tools_introspection.py  _tools_quality.py  _tools_search.py  _tools_structure.py
ml/: convert_coderankembed_to_onnx.py  evaluate_m5.py  extract_real_symbols.py  generate_claude_queries.py  generate_llm_queries.py  generate_synthetic_symbols.py  generate_training_data_m5.py  pre_encode_m5.py  retrain_all_real.py  retrain_m1.py  train_all.py  train_m5.py  train_m5m6_prototype.py  upload_coderankembed_onnx.py
ml/caller_disambiguator/: features.py  generate_data.py  stress_test.py  train.py
ml/code_search_encoder/: dataset.py  (+7 more)
tests/: _tool_compat.py  conftest.py  test_alias_tracking.py  test_caller_disambig_ml.py  test_cap_removal.py  test_circular_deps.py  test_class_attr_tracking.py  test_class_context.py  test_code_encoder.py  test_conventions.py  test_cross_encoder.py  test_dependency_graph.py  test_di_patterns.py  test_embeddings_custom_model.py  test_error_handling.py  test_hints.py  test_import_index.py  test_import_resolution.py  test_init_reexport_resolution.py  test_local_module_resolution.py  test_mamba_inference.py  test_ml_inference.py  test_ml_models_e2e.py  test_module_context.py  test_module_deps.py  test_receiver_extraction.py  test_reexport_tracking.py  test_relevance_v2.py  test_resolution.py  test_search.py  test_search_encoder_swap.py  test_search_enhanced.py  test_search_fallback.py  test_search_gibberish.py  test_search_metadata.py  test_search_test_penalty.py  test_server.py  test_singleton_tracking.py  test_source_filter.py  test_subclasses.py  (+11 more)
(+53 files in other folders)
