[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grafyx-mcp"
version = "0.1.0"
description = "MCP server that gives AI coding assistants real-time codebase understanding via Graph-sitter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["mcp", "ai", "codebase", "graph", "tree-sitter", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "graph-sitter>=0.1.0",
    "fastmcp>=2.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
embeddings = [
    "fastembed>=0.7.0",
    "numpy>=2.0.0",
]

[project.scripts]
grafyx = "grafyx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["grafyx"]

[project.urls]
Homepage = "https://github.com/grafyx-ai/grafyx"
Repository = "https://github.com/grafyx-ai/grafyx"
Issues = "https://github.com/grafyx-ai/grafyx/issues"
