[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grafyx-mcp"
version = "0.2.1"
description = "MCP server that gives AI coding assistants real-time codebase understanding via Graph-sitter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Bilal Karadeniz", email = "bilal07karadeniz@gmail.com"},
]
keywords = ["mcp", "ai", "codebase", "graph", "tree-sitter", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "graph-sitter>=0.56.0",
    "fastmcp>=2.0.0",
    "watchdog>=4.0.0",
    # Cap protects against breaking changes in fastembed.add_custom_model.
    "fastembed>=0.7.0,<0.10.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Kept as an alias so older install instructions (`pip install
# grafyx-mcp[embeddings]`) keep working as a no-op.
embeddings = []
bench = [
    "pytest>=8.0",
]

[project.scripts]
grafyx = "grafyx.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["grafyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/bilal07karadeniz/Grafyx"
Repository = "https://github.com/bilal07karadeniz/Grafyx"
Issues = "https://github.com/bilal07karadeniz/Grafyx/issues"
